--- a/app/src/main/res/layout/fragment_video_view_play.xml
+++ b/app/src/main/res/layout/fragment_video_view_play.xml
@@ -1,18 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.LinearLayoutCompat
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:padding="10dp"
-    android:orientation="vertical"
-    tools:context=".video.VideoViewPlayFragment">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <VideoView
-        android:id="@+id/videoView"
+    <data>
+
+    </data>
+
+    <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        />
+        android:padding="10dp"
+        android:orientation="vertical"
+        tools:context=".video.VideoViewPlayFragment">
 
-</androidx.appcompat.widget.LinearLayoutCompat>
+        <VideoView
+            android:id="@+id/videoView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+    </androidx.appcompat.widget.LinearLayoutCompat>
+</layout>
