--- a/app/src/main/res/layout/fragment_video_view_play.xml
+++ b/app/src/main/res/layout/fragment_video_view_play.xml
@@ -12,12 +12,13 @@
         android:layout_height="match_parent"
         android:padding="10dp"
         android:orientation="vertical"
+        android:gravity="center"
         tools:context=".video.VideoViewPlayFragment">
 
         <VideoView
             android:id="@+id/videoView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="wrap_content" />
 
     </androidx.appcompat.widget.LinearLayoutCompat>
 </layout>
