--- a/commonlib/src/main/res/values/styles.xml
+++ b/commonlib/src/main/res/values/styles.xml
@@ -29,4 +29,9 @@
         <item name="android:layout_margin">8dp</item>
         <item name="android:background">@drawable/bg_confirm_btn</item>
     </style>
+
+    <style name="SecondText">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
 </resources>
