--- a/app/src/main/res/layout/fragment_media_player_video.xml
+++ b/app/src/main/res/layout/fragment_media_player_video.xml
@@ -1,31 +1,108 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
     </data>
 
-    <RelativeLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".video.MediaPlayerVideoFragment">
 
         <TextView
+            android:id="@+id/textView2"
             style="@style/SecondText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
             android:text="@string/media_player_play_video"
-            android:layout_centerHorizontal="true"
-            android:layout_above="@id/svVideo"/>
+            app:layout_constraintBottom_toTopOf="@+id/svVideo"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_chainStyle="packed" />
 
         <SurfaceView
             android:id="@+id/svVideo"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="250dp"
             android:layout_margin="8dp"
-            android:layout_centerInParent="true"/>
+            app:layout_constraintBottom_toTopOf="@+id/tvCurrentTime"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
-    </RelativeLayout>
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/tvCurrentTime"
+            style="@style/SecondText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/svVideo"
+            app:layout_constraintBottom_toTopOf="@id/btnPlay"
+            tools:text="00:00" />
+
+        <SeekBar
+            android:id="@+id/sbProgress"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="@id/tvCurrentTime"
+            app:layout_constraintEnd_toStartOf="@id/tvTimeEnd"
+            app:layout_constraintStart_toEndOf="@id/tvCurrentTime"
+            app:layout_constraintTop_toTopOf="@id/tvCurrentTime"
+            tools:text="00:00" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/tvTimeEnd"
+            style="@style/SecondText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/tvCurrentTime"
+            app:layout_constraintBottom_toBottomOf="@id/tvCurrentTime"
+            tools:text="00:00" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btnPlay"
+            style="@style/SecondText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:text="播放"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/btnPause"
+            app:layout_constraintTop_toBottomOf="@id/tvCurrentTime"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_chainStyle="spread" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btnPause"
+            style="@style/SecondText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:text="暂停"
+            app:layout_constraintStart_toEndOf="@id/btnPlay"
+            app:layout_constraintEnd_toStartOf="@id/btnReset"
+            app:layout_constraintTop_toTopOf="@id/btnPlay"
+            app:layout_constraintBottom_toBottomOf="@id/btnPlay" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btnReset"
+            style="@style/SecondText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:text="重置"
+            app:layout_constraintStart_toEndOf="@id/btnPause"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/btnPlay"
+            app:layout_constraintBottom_toBottomOf="@id/btnPlay" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
