--- a/commonlib/src/main/res/layout/dialog_confirm.xml
+++ b/commonlib/src/main/res/layout/dialog_confirm.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:maxWidth="@dimen/confirm_dialog_width"
     android:maxHeight="@dimen/confirm_dialog_height"
     android:background="@drawable/bg_confirm_dialog"
-    android:layout_gravity="center"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.appcompat.widget.AppCompatTextView
@@ -17,11 +17,12 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/divider1"
         tools:text="这是标题"/>
 
     <View
         android:id="@+id/divider1"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="1dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
@@ -39,16 +40,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/divider1"
+        app:layout_constraintBottom_toTopOf="@id/divider2"
         tools:text="这是描述这是描述这是描述这是描述这是描述"/>
 
     <View
         android:id="@+id/divider2"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="1dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@id/tvDesc"
+        app:layout_constraintEnd_toEndOf="@id/tvDesc"
         app:layout_constraintTop_toBottomOf="@id/tvDesc"
         app:layout_constraintBottom_toTopOf="@id/cancel"
         android:background="@android:color/black"/>
