--- a/app/src/main/res/layout/fragment_camera2_record.xml
+++ b/app/src/main/res/layout/fragment_camera2_record.xml
@@ -13,6 +13,17 @@
         android:layout_height="match_parent"
         tools:context=".MainActivity">
 
+        <TextView
+            android:id="@+id/tvLoading"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/initializing"
+            android:textSize="24sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" />
+
         <SurfaceView
             android:id="@+id/preview"
             android:layout_width="match_parent"
