feat: 完善Camera2录像的代码，todo: 待调试。

--- a/app/src/main/res/layout/fragment_camera2_record_video.xml
+++ b/app/src/main/res/layout/fragment_camera2_record_video.xml
@@ -30,5 +30,14 @@
             android:scaleType="fitCenter"
             android:background="@drawable/ic_shutter"
             android:contentDescription="@string/start_record" />
+
+        <Chronometer
+            android:id="@+id/capture_timer"
+            android:layout_width="96dp"
+            android:layout_height="96dp"
+            android:layout_gravity="end|bottom"
+            android:textColor="@android:color/holo_red_light"
+            android:scaleType="fitCenter"
+            android:visibility="gone"/>
     </FrameLayout>
 </layout>
