--- a/app/src/main/res/layout/fragment_audio_play.xml
+++ b/app/src/main/res/layout/fragment_audio_play.xml
@@ -11,7 +11,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:keepScreenOn="true">
         
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/ivRotate"
