feat: todo 待增加音频录制的功能，实现音频录制动画布局。

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="color_abf392">#ABF392</color>
     <color name="color_43e30D">#43E30D</color>
     <color name="color_2a9c02">#2A9C02</color>
+    <color name="main_blue">#1296DB</color>
 </resources>
