feat: 优化录音页布局提示。todo 待增加音频录制的功能。

--- a/app/src/main/res/layout/fragment_audio_record.xml
+++ b/app/src/main/res/layout/fragment_audio_record.xml
@@ -27,6 +27,18 @@
             android:layout_centerInParent="true"
             />
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_centerHorizontal="true"
+            android:layout_below="@id/ivRecord"
+            android:textColor="@color/main_blue"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:text="按住麦克风录音，松开结束录音。"
+            />
+
     </RelativeLayout>
 
 </layout>
